--- a/rickMorty/src/app/app.component.html
+++ b/rickMorty/src/app/app.component.html
@@ -15,6 +15,9 @@
           <a class="nav-link" routerLink="/lista" >Personajes</a>
         </li>
         <li class="nav-item">
+          <a class="nav-link" routerLink="/add/person" >Add</a>
+        </li>
+        <li class="nav-item">
           <a class="nav-link" routerLink="/about" >About</a>
         </li>
       </ul>
